--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+ProjectSettings\Packages\com.unity.testtools.codecoverage\Settings.json
