--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-ProjectSettings\Packages\com.unity.testtools.codecoverage\Settings.json
+ProjectSettings/Packages/com.unity.testtools.codecoverage/Settings.json
